plugins {
    id 'java'
    id 'application'
}

group = 'com.carlos'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Implementation-Title': 'Best Matching Restaurant',
                'Implementation-Version': '1.0',
                'Main-Class': 'com.assessment.BestMatchingRestaurant'
    }
}